<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorLightOrange"
        >

    <EditText
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/etFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name"
            android:textSize="18sp"/>

    <EditText
            app:layout_constraintTop_toBottomOf="@+id/etFName"
            android:id="@+id/etLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"
            android:textSize="18sp"/>
    <EditText
            app:layout_constraintTop_toBottomOf="@+id/etLName"
            android:id="@+id/etStAddr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_street_address"
            android:textSize="18sp"/>
    <EditText
            app:layout_constraintTop_toBottomOf="@+id/etStAddr"
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city"
            android:textSize="18sp"/>
    <EditText
            app:layout_constraintTop_toBottomOf="@+id/etCity"
            android:id="@+id/etState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_state"
            android:textSize="18sp"/>
    <EditText
            app:layout_constraintTop_toBottomOf="@id/etState"
            android:id="@+id/etZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_zip"
            android:textSize="18sp"/>
    <Button
            app:layout_constraintBottom_toTopOf="@+id/tvCurrentlySaved"
            app:layout_constraintTop_toBottomOf="@+id/etZip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/btSaveInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_info"
            android:onClick="onClick"/>
    <TextView
            android:id="@+id/tvCurrentlySaved"
            app:layout_constraintTop_toBottomOf="@+id/btSaveInfo"
            android:text="@string/currently_saved"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tvFName"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentlySaved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
    />
    <TextView
            android:id="@+id/tvLName"
            app:layout_constraintTop_toBottomOf="@+id/tvFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
    />
    <TextView
            android:id="@+id/tvAddress"
            app:layout_constraintTop_toBottomOf="@+id/tvLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
    />
    <TextView
            android:id="@+id/tvCity"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
    />
    <TextView
            android:id="@+id/tvState"
            app:layout_constraintTop_toBottomOf="@+id/tvCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark" />
    <TextView
            android:id="@+id/tvZip"
            app:layout_constraintTop_toBottomOf="@+id/tvState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark" />

</android.support.constraint.ConstraintLayout>